Solved content overlap issue

--- a/sites/all/themes/mortgagespeak/src/sass/style.scss
+++ b/sites/all/themes/mortgagespeak/src/sass/style.scss
@@ -1759,9 +1759,9 @@ a {
         display: inline-block;
         padding: 4px 0;
         @media (min-width: 992px) {
-          width: -webkit-calc('100% - 420px');
-          width: -moz-calc('100% - 420px');
-          width: calc('100% - 420px');
+          width: -webkit-calc(100% - 420px);
+          width: -moz-calc(100% - 420px);
+          width: calc(100% - 420px);
         }
         .tracked-news-lists {
           float: left;
